-issue#1110: Add CPU Total to 'SNMP - Get Processor Information'
-issue#1111: PHP NOTICE when using LDAP authenication
-issue#1116: Filters not allowing "None" or "All" when editing report item
-issue#1119: Reduced amount of data fetched for CPU usage to just the data used
-issue#1121: Bandwidth summation not using correct locale
-issue#1130: Fix logging level issue where logs of same level as setting where not logged
-issue#1131: Make upgrade_database.php use same version compare as /install/ system
-issue#1133: Fix issues with variable name and debug log
-issue#1143: ss_host_cpu.php - Division by zero / Invalid Return Value
-issue: Updated Graph pagenation and filter reset
-issue: Resolve issues with cacti_version_compare() processing
-issue: Zoom context menu stays open after zoom out actions

1.1.28
-issue#958: User Group Tree permissions not calculated fully
-issue#959: Issue viewing email reports due to email client decoding problems
-issue#992: RRDfile naming issues that result from random sorting during export
-issue#1012: Issue where disabled devices will not appear in Tree editor
-issue#1044: Handle invalid exclusion regex properly when viewing the log
-issue#1045: Issue with multiple pages and confirmation dialogs
-issue#1048: Problem importing vdefs from templates
-issue#1053: Remote Data Collector now works with https and self signed certificates
-issue#1055: Errors in data source statistics inserts when invalid output is encountered
-issue#1057: CVE-2017-16641 - Potential vulnerability in RRDtool functions
-issue#1058: ICMP Ping to and IPv6 address fails to gather data for ping latency
-issue#1059: Aggregate item filter should use regular expressions to avoid SQL errors due to flawed filter logic
-issue#1064: When a Device Template is removed, Automation Templates for that Device Template remain
-issue#1066: CVE-2017-16660 in remote_agent.php logging function
-issue#1066: CVE-2017-16661 in view log file